--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-<p>I dont Know</p>
+<h1>I dont Know</h1>
 <h3>I want to write anything, but my mind want a take a rest:<</h3>
+<nav>Support me if you want, but i know you need it conditionally</nav>
 </body>
 </html>
