--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>I dont Know</h1>
-<h3>I want to write anything, but my mind want a take a rest:<</h3>
-<nav>Support me if you want, but i know you need it conditionally</nav>
-</body>
-</html>
+    <header>
+        <div class="head">
+            <h1>Personal Blog</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, impedit dicta.</p>
+        </div>
+    <nav class="navbar">
+            <a href="index.html">Home</a>
+            <a href="context.html">Content</a>
+            <a href="about.html">About</a>             
+    </nav>
+    </header>
+    <main>
+        <div id="Home">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDOhSnjiXNYmnRiRwygZelxsVSySmcS7PTJw&s" alt="My Personal Image" class="img1">
+            <div class="SubHead1">
+                <h2>
+                    Hi, I'm Arrizal Alvin<br>Student & Graphic Designer
+                </h2>
+                <p>
+                   An active student at a relatively new campus in the Special Region of Yogyakarta, with interests in graphic design, photography, and 3D modeling.
+                </p>
+            </div>
+            <a>More About Me</a>   
+        </div>
+      
