--- a/about.html
+++ b/about.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <header>
+        <div class="head">
+            <h1>About Us</h1>
+            <p>This is the about page of the personal blog.</p>
+        </div>
         <nav class="navbar">
             <a href="index.html">Home</a>
             <a href="context.html">Content</a>
             <a href="about.html">About</a>
         </nav>
     </header>
-    <h1>About Us</h1>
-    <p>This is the about page of the personal blog.</p>
 </body>
 </html>
