--- a/context.html
+++ b/context.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <header>
+        <div class="head">
+            <h1>Content</h1>
+            <p>This is a Content Page Especially</p>    
+        </div>
         <nav class="navbar">
             <a href="index.html">Home</a>
             <a href="context.html">Content</a>
             <a href="about.html">About</a>
         </nav>
     </header>
-<h1>Content</h1>
-<p>This is a Content Page Specially</p>    
 </body>
 </html>
