--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="head">
             <h1>Personal Blog</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, impedit dicta.</p>
+            <p>Welcome to Vinn's Personal Blog, now you can find any articles here...</p>
         </div>
     <nav class="navbar">
             <a href="index.html">Home</a>
@@ -19,7 +19,7 @@
     </nav>
     </header>
     <main>
-        <div id="Home">
+        <div class="Article" id="Home">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDOhSnjiXNYmnRiRwygZelxsVSySmcS7PTJw&s" alt="My Personal Image" class="img1">
             <div class="SubHead1">
                 <h2>
