--- a/index.html
+++ b/index.html
@@ -1,34 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <div class="head">
-            <h1>Personal Blog</h1>
-            <p>Welcome to Vinn's Personal Blog, now you can find any articles here...</p>
-        </div>
-    <nav class="navbar">
-            <a href="index.html">Home</a>
-            <a href="context.html">Content</a>
-            <a href="about.html">About</a>             
-    </nav>
-    </header>
-    <main>
-        <div class="Article" id="Home">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDOhSnjiXNYmnRiRwygZelxsVSySmcS7PTJw&s" alt="My Personal Image" class="img1">
-            <div class="SubHead1">
-                <h2>
-                    Hi, I'm Arrizal Alvin<br>Student & Graphic Designer
-                </h2>
-                <p>
-                   An active student at a relatively new campus in the Special Region of Yogyakarta, with interests in graphic design, photography, and 3D modeling.
-                </p>
-            </div>
-            <a>More About Me</a>   
-        </div>
-      
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>vynnproject</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
